# deephaven-example-use-cases

./: .gitignore  README.md  requirements.txt
examples/ai/: README.md  listener_based_ai.py
examples/combined_table/: README.md  combined_table_common.py  combined_table_server.py  test_server.py
examples/cpp/: README.md
examples/cpp/01-blackscholes-javacpp/: README.md  build.sh
examples/cpp/02-blackscholes-pybind11/: README.md  build.sh  pyproject.toml  setup.py
examples/cpp/02-blackscholes-pybind11/src/main/cpp/: blackscholes_bindings.cpp
examples/cpp/03-blackscholes-combined/: Dockerfile  README.md  build.sh  docker-compose.yml  requirements.txt
examples/cpp/cpp-in-java/: build.gradle
examples/cpp/cpp-in-java-2/: build.sh
examples/cpp/deephaven-example/: Dockerfile  README.md  build.sh  build_docker.sh  run_it.py
examples/cpp/javacpp/: README.md  build.sh
examples/cpp/pybind11/: README.md  build.sh  example.cpp  run_it.py  setup.py
examples/finance/: market_factors.py  risk_management.py
examples/finance/option_risk/: README.md  (+11 more)
examples/indexing/: README.md
examples/misc/: dhe_combined_hist_live_table.py
examples/pandas_interop/: README.md  update_dataframe_listener.py  update_dataframe_thread.py
examples/pq_orchestration/: README.md  pq_orchestrator.py  setup.py
examples/python/: update_dataframe.py  update_dataframe_thread.py
examples/remote_tables/: README.md  run.sh  setup.sh
examples/replay_orchestration/: README.md  replay_orchestrator.py  setup.py
examples/sharing_tables/: README.md  client.py  run.sh  server.py  setup.sh
(+97 files in other folders)
